<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/button_bg"
    android:paddingTop="20dp"
    android:paddingBottom="25dp"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:baselineAligned="false"
    android:id="@+id/item">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/weatherIcon_ImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/empty"/>

        <TextView
            android:id="@+id/currentTemp_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_txt"
            android:textColor="?attr/colorSecondary"
            android:textSize="8pt"
            android:layout_marginTop="-10dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_txt"
            android:textColor="?attr/colorSecondary"
            android:textSize="6pt"/>
        <TextView
            android:id="@+id/time_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_txt"
            android:textColor="?attr/colorSecondary"
            android:textSize="6pt"/>
    </LinearLayout>

    <!-- End -->
</LinearLayout>