<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    tools:context=".Settings">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="?attr/textFillColor"
        android:textSize="14pt"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_bg"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempUnit"
            android:textColor="?attr/colorSecondary"
            android:textSize="10pt"
            android:layout_marginStart="30dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ToggleButton
                android:id="@+id/tempUnit_ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="30dp"
                android:background="@drawable/button_bg2"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:textAllCaps="false"
                android:textColor="?attr/textFillColor"
                android:textSize="7pt"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="?attr/colorSecondary"
            android:textSize="10pt"
            android:layout_marginStart="30dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/feedback_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="30dp"
                android:background="@drawable/button_bg2"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/feedback"
                android:textAllCaps="false"
                android:textColor="?attr/textFillColor"
                android:textSize="7pt"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/about_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="@string/about"
        android:textColor="?attr/colorSecondary"
        android:background="@drawable/button_bg"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:visibility="visible"
        android:textAllCaps="false"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp"
            android:background="@drawable/warning_bg"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clearData"
                android:textColor="?attr/colorSecondary"
                android:textSize="10pt"
                android:layout_marginStart="30dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/reset_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/warning_button_bg"
                    android:paddingStart="30dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="10dp"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    android:textColor="@color/red3"
                    android:textSize="7pt"
                    tools:ignore="TextSizeCheck"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>