<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/button_bg"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp">

    <ImageView
        android:id="@+id/weatherIcon_ImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/empty"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/currentTemp_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_txt"
        android:textColor="?attr/colorSecondary"
        android:textSize="12pt"
        android:layout_marginTop="-20dp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginEnd="2.5dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/description_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="?attr/colorSecondary"
                android:textSize="7pt"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/humidity_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="?attr/colorSecondary"
                android:textSize="7pt"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>


            <TextView
                android:id="@+id/time_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="?attr/colorSecondary"
                android:textSize="7pt"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/city_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="?attr/colorSecondary"
                android:textSize="7pt"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="2.5dp"
            android:gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/feels_like_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="?attr/colorSecondary"
                android:textSize="7pt"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/wind_speed_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="?attr/colorSecondary"
                android:textSize="7pt"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>


            <TextView
                android:id="@+id/date_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="?attr/colorSecondary"
                android:textSize="7pt"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/country_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="?attr/colorSecondary"
                android:textSize="7pt"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/close_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="7.5pt"
        android:text="@string/close"
        android:textColor="?attr/colorSecondary"
        android:background="@drawable/edittext_bg"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:visibility="visible"
        android:textAllCaps="false"/>

</LinearLayout>
